Updated README.md, deleted unused file and methods, changed returning and parsing nulls, added error handling to controller and minor changes